# hyp3-gamma

./: .gitignore  .gitlab-ci.yml  .trufflehog.txt  CHANGELOG.md  Dockerfile  Jenkinsfile  LICENSE  MANIFEST.in  README.md  conda-env.yml  environment.yml  pyproject.toml  requirements-develop.txt  requirements.txt  setup.py  tox.ini
.github/: dependabot.yml  pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: release.md
.github/workflows/: changelog.yml  release-template-comment.yml  release.yml  static-analysis.yml  tag-version.yml  test-and-build.yml
.gitlab/: gitleaks.toml
.gitlab/issue_templates/: default.md
.gitlab/merge_request_templates/: default.md
docs/archive/: hyp3-geocode-history.md  hyp3-insar-gamma-history.md  hyp3-insar-history.md  hyp3-lib-gamma-history.md  hyp3-rtc-gamma-history.md
etc/: README_RTC_GAMMA.txt  README_Template.txt  RTC_GAMMA_Template.xml  RTC_GAMMA_Template_color_png.xml  RTC_GAMMA_Template_dem_EUDEM.xml  RTC_GAMMA_Template_dem_GIMP.xml  RTC_GAMMA_Template_dem_NED.xml  RTC_GAMMA_Template_dem_REMA.xml  RTC_GAMMA_Template_dem_SRTM.xml  RTC_GAMMA_Template_grayscale_png.xml  RTC_GAMMA_Template_inc.xml  RTC_GAMMA_Template_ls.xml  jupyter_notebook_config.py  rtc_iso.xsl  sentinel_xml.xsl  start-jupyter.sh
hyp3_gamma/: SLC_copy_S1_fullSW.py  __init__.py  __main__.py  area2point.py  converter.py  dem.py  getParameter.py  get_gamma_version.py  get_parameter.py  ingest_S1_granule.py  make_asf_browse.py  par_s1_slc_single.py  ps2dem.py  series_converter.py  util.py  utm2dem.py  water_mask.py
hyp3_gamma/geocode/: __init__.py  __main__.py  process.py  sentinel.py
hyp3_gamma/geocode/etc/: GeocodingTemplate.xml  GeocodingTemplate_color_png.xml  GeocodingTemplate_grayscale_png.xml
hyp3_gamma/hyp3_rtc_gamma/: __main__.py  rtc_sentinel.py
hyp3_gamma/insar/: __init__.py  __main__.py  create_metadata_insar_gamma.py  getDemFileGamma.py  ifm_sentinel.py  interf_pwr_s1_lt_tops_proc.py  par_s1_slc.py  par_s1_slc_single.py  process.py  slc_copy_s1_full_sw.py  stack_sentinel.py  unwrapping_geocoding.py  water_mask.py
hyp3_gamma/insar/deprecated/: stack_sentinel.py
hyp3_gamma/insar/etc/: README_InSAR_GAMMA.txt
hyp3_gamma/metadata/: README.md  __init__.py  __main__.py  arc.xml.j2  area.xml.j2  browse-color.j2  browse-color.xml.j2  browse-greyscale.j2  browse-greyscale.xml.j2  browse.j2  browse.xml.j2  create.py  dem-EU_DEM_V11.xml.j2  dem-GIMP.xml.j2  dem-NED1.xml.j2  dem-NED13.xml.j2  dem-REMA.xml.j2  dem-SRTMGL1.xml.j2  dem-SRTMUS1.xml.j2  dem-eu.xml.j2  dem-gimp.xml.j2  dem-ned.xml.j2  dem-rema.xml.j2  dem-srtm.xml.j2  dem.xml.j2  environment.yml  inc_map.xml.j2  insar.py  ls_map.xml.j2  macros.j2  product.xml.j2  readme.md.txt.j2  rgb.xml.j2  rtc.py  setup.py  util.py
hyp3_gamma/rtc/: __main__.py  byte_sigma_scale.py  check_coreg.py  coregistration.py  create_amp.py  gdal_file.py  make_cogs.py  raster_boundary_to_shape.py  rtc_sentinel.py  smoothem.py
hyp3_rtc_gamma/: __init__.py  __main__.py  asf_utils.py  check_coreg.py  create_metadata.py  metadata_utils.py  process.py  rtc_sentinel.py  smoothem.py  v2_entrypoint.py  xml2meta.py
hyp3_rtc_gamma/etc/: README_RTC_GAMMA.txt  RTC_GAMMA_Template.xml  RTC_GAMMA_Template_color_png.xml  RTC_GAMMA_Template_dem_EUDEM.xml  RTC_GAMMA_Template_dem_GIMP.xml  RTC_GAMMA_Template_dem_REMA.xml  RTC_GAMMA_Template_grayscale_png.xml  RTC_GAMMA_Template_ls.xml  rtc_iso.xsl
prototype/: setup-dev.ipynb
src/: asf_utils.py  blank_bad_data.py  check_coreg.pl  check_coreg.py  createAmp.py  create_metadata.py  get_bb_from_shape.py  mk_geo_radcal  rtc_sentinel.pl  rtc_sentinel.py  rtc_sentinel_stack.py  smoothem.py  utm2dem.pl  xml2meta.py
tests/: conftest.py  test_dem.py  test_entrypoints.py  test_get_gamma_version.py  test_main.py  test_make_asf_browse.py  test_rtc_sentinel.py  test_util.py  test_v1.py  test_v2.py  test_water_mask.py
tests/data/: alaska.kml  antimeridian.kml  far-north.kml  south-pole.kml  water_mask_input.tif  water_mask_output_info.txt
tests/geocode/: test_entrypoints.py
tests/insar/: test_entrypoints.py  test_ifm_sentinel.py  test_main.py  test_unwrapping_geocoding.py
tests/metadata/: conftest.py  test_insar_gamma.py  test_rtc_gamma.py
tests/rtc/: test_check_coreg.py  test_coregistration.py  test_make_cogs.py  test_rtc_sentinel.py
(+87 files in other folders)
